#!/bin/bash
ORNG='\033[0;33m'
NC='\033[0m'
W='\033[1;37m'
LP='\033[1;35m'
YLW='\033[1;33m'
LBBLUE='\e[104m'
RED='\033[0;31m'

echo -e " ${W}======================================================${NC}\n"
echo -e " ${LBBLUE}Changelog${NC}\n ${YLW}***********${NC}\n"
echo -e "${RED} Additions:\n${NC}"
echo -e " ${LP}- ${ORNG}XSS-Loader ${W}- XSS Payloader generator"
echo -e " ${LP}- ${ORNG}DeadTrapv2 ${W}- An OSINT tool to track down footprints of a phone number"
echo -e " ${LP}- ${ORNG}GHunt ${W}- GHunt is an OSINT tool to extract information from any Google Account using an email."
echo -e " ${LP}- ${ORNG}TruffleSNout ${W}- Interactive AD discovery toolkit for offensive operators, focused on Situational awareness"
echo -e "${LP}- ${ORNG}BetterSafetyKatz ${W}- Modified fork of SafetyKatz dynamically patching runtime, based on detected signatures\nusing SharpSploit DInvoke to get it into memory${NC}"
echo -e "\n ------------------------------------------------------ "
echo -e "\n ${RED}Optional Plugins:\n${NC}"
echo -e " ${LP}- ${ORNG}G ${W}- GUI Overlay"
echo -e "     ${YLW}https://github.com/Sifter-Ex/g${NC}"
echo -e " ${LP}- ${ORNG}F ${W}- DanderFuzz Exploitational Framework"
echo -e "     ${YLW}https://github.com/Sifter-Ex/f${NC}"
echo ""
echo -e " ${LP}- ${RED}Inputting ${W}info ${YLW}into any menu screen brings up the Module Info Screen"
echo -e "\n ${W}======================================================${NC}"

##########################______________ VGhlIERlYWQgQnVubnkgQ2x1Yg== ______________##########################