@@ -7,11 +7,10 @@ INV='\e[7m'
 URED='\033[4;31m'
 UBLUE='\033[4;34m'
 
-cd /opt/CVE-2020-0683
 echo -e "${INV}"
-sudo cp EoP.zip -t /home/$USER/Desktop
+sudo cp /opt/sifter/modules/postex/EoP/EoP.zip -t /home/$USER/Desktop
 sudo cp /opt/sifter/extras/unzip.exe -t /home/$USER/Desktop
-sudo chown $USER:$USER /home/$USER/Desktop/EoP.zip /home/$USER/Desktop/unzipme.exe
+sudo chown $USER:$USER /home/$USER/Desktop/EoP.zip /home/$USER/Desktop/unzip.exe
 figlet -f mini "EoP Exploit (CVE-2020-0683)"
 echo -e "${URED}EoP.zip ${W}has been copied to your Desktop. Please transfer this file to target and unzip in a CLI"
 echo -e "then cd into bin_MsiExploit. Please ensure MsiExploit.exe & foo.msi stay in the same directory or this will fail!"
