@@ -15,6 +15,7 @@ echo -e " ${LP}- ${ORNG}DeadTrapv2 ${W}- An OSINT tool to track down footprints 
 echo -e " ${LP}- ${ORNG}GHunt ${W}- GHunt is an OSINT tool to extract information from any Google Account using an email."
 echo -e " ${LP}- ${ORNG}TruffleSNout ${W}- Interactive AD discovery toolkit for offensive operators, focused on Situational awareness"
 echo -e "${LP}- ${ORNG}BetterSafetyKatz ${W}- Modified fork of SafetyKatz dynamically patching runtime, based on detected signatures\nusing SharpSploit DInvoke to get it into memory${NC}"
+echo -e " ${LP}- ${ORNG}CVE-2018-8120 ${W}- Added for Privilege Escalation of a target session${NC}"
 echo -e "\n ------------------------------------------------------ "
 echo -e "\n ${RED}Optional Plugins:\n${NC}"
 echo -e " ${LP}- ${ORNG}G ${W}- GUI Overlay"
